# Project
[project]
name = "vultr-python"
description = "Python 3 wrapper for the Vultr API v2.0"
authors = [{ name="Shane" }]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Typing :: Typed",
]
license = { text = "MIT" }
#license = { file = "LICENSE" }

dependencies = ["requests"]

[dependency-groups]
dev = [
    "bandit",
    "black",
    "build",
    "coverage",
    "isort",
    "mypy",
    "pytest",
    "requests",
    "ruff",
    "setuptools",
    "ty",
    "types-requests",
    "validate-pyproject[all]",
    "watchdog[watchmedo]",
]

[project.urls]
GitHub = "https://github.com/cssnr/vultr-python"
Issues = "https://github.com/cssnr/vultr-python/issues"
Changelog = "https://github.com/cssnr/vultr-python/releases"
Documentation = "https://cssnr.github.io/vultr-python/"

Homepage = "https://cssnr.com/"
Funding = "https://ko-fi.com/cssnr"
Discord = "https://discord.gg/wXy6m2X8wY"

# Setup Tools
[tool.setuptools.package-data]
vultr = ["py.typed"]
[tool.setuptools.dynamic]
version = { attr = "vultr.version.__version__" }

# Build System
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Bandit
# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = ["venv"]
skips = ["B105", "B107"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = ["*.egg-info/*", ".github/*"]
source = ["src"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["src", "test"]
skip = ["venv", ".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
#ignore_missing_imports = true
exclude = ["venv"]

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = [".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
